# zygisk-qq-notify-evolution

./: .gitattributes  .gitignore  AGENTS.md  README.md  build.sh  update.json
.github/workflows/: release.yml  smoke.yml
module/: customize.sh  module.prop
module/webroot/: index.html
native/: CMakeLists.txt  zygisk.hpp
native/src/: module.cpp  parser.cpp  parser.hpp
native/test/: parser_test.cpp
